"""Define bazel dependencies common to the internal and external repos."""

bazel_dep(name = "apple_support", version = "1.24.2", repo_name = "build_bazel_apple_support")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "curl", version = "8.12.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "imgui", version = "1.91.8")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.5", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_mojo", version = "0.6.0")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_pycross", version = "0.8.1")
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "with_cfg.bzl", version = "0.10.3")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)

archive_override(
    module_name = "rules_mojo",
    integrity = "sha256-gkappMvXTJYRANGySlRe8ASrcDXHEagi5Xf0RWVcse0=",
    strip_prefix = "rules_mojo-ca33e95f61e9c48c6036b9e7d8a31ab93c957b1f",
    urls = [
        "https://github.com/modular/rules_mojo/archive/ca33e95f61e9c48c6036b9e7d8a31ab93c957b1f.tar.gz",
    ],
)

single_version_override(
    module_name = "gazelle",
    patch_strip = 1,
    patches = [
        # https://github.com/bazel-contrib/bazel-gazelle/pull/2249
        "//bazel/public-patches:gazelle-package-top.patch",
        # https://github.com/bazel-contrib/bazel-gazelle/pull/2248
        "//bazel/public-patches:gazelle-exports-files.patch",
        # https://github.com/bazel-contrib/bazel-gazelle/pull/2247
        "//bazel/public-patches:gazelle-default-features.patch",
    ],
)

single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        # https://github.com/bazelbuild/rules_cc/pull/527
        "//bazel/public-patches:rules_cc_textual_hdrs.patch",
        # https://github.com/bazelbuild/rules_cc/pull/578
        "//bazel/public-patches:rules_cc_private_api.patch",
    ],
)

bazel_dep(name = "rules_mypy", version = "0.39.0", dev_dependency = True)
single_version_override(
    module_name = "rules_mypy",
    patch_strip = 1,
    patches = [
        # TODO: Should we submit this upstream or force our deps to directly
        # depend on the things that provide their pyi files?
        "//bazel/public-patches:rules_mypy_pyi_files.patch",
        # https://github.com/bazel-contrib/rules_mypy/pull/118
        "//bazel/public-patches:rules_mypy_pyinfo.patch",
    ],
)

single_version_override(
    module_name = "rules_python",
    patch_strip = 1,
    patches = [
        # https://github.com/bazel-contrib/rules_python/pull/3233
        "//bazel/public-patches:rules_python_wheel.patch",
        # TODO (SDLC-2681): figure out why this is breaking our code.
        # reverts https://github.com/bazel-contrib/rules_python/pull/3242
        "//bazel/public-patches:rules_python_revert.patch",
    ],
)

single_version_override(
    module_name = "rules_pycross",
    patch_strip = 1,
    patches = [
        # TODO: Remove when 3.8 is no longer pulled in transitively
        "//bazel/public-patches:rules_pycross_versions.patch",
    ],
)

single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = [
        # FIXME: `@system_python` is a dev dep, but used in non-dev code
        "//bazel/public-patches:protobuf-dev-dep.patch",
    ],
)

single_version_override(
    module_name = "with_cfg.bzl",
    patch_strip = 1,
    patches = [
        "//bazel/public-patches:with_cfg_visibility.patch",
    ],
)

single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        # Partial revert of https://github.com/grpc/grpc/commit/9a6bcd4c2f2913c1bfe8dccf9e536d8f53c360c2
        "//bazel/public-patches:grpc-no-macos-x86.patch",
        # TODO: Drop when logspew is fixed
        "//bazel/public-patches:grpc-warnings.patch",
    ],
    version = "1.76.0.bcr.1",
)

DEFAULT_PYTHON_VERSION = "3.13"

PYTHON_VERSIONS = [
    "3_10",
    "3_11",
    "3_12",
    "3_13",
    "3_14",
]

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = DEFAULT_PYTHON_VERSION)

[
    python.toolchain(python_version = version.replace("_", "."))
    for version in PYTHON_VERSIONS
]

# Only the lowest version is used explicitly, everything else is indirect
use_repo(python, "python_" + PYTHON_VERSIONS[0])

environments = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
environments.create_for_python_toolchains(
    name = "rules_pycross_all_environments",
    platforms = [
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu-freethreaded",
        "aarch64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu-freethreaded",
        "aarch64-apple-darwin",
        "aarch64-apple-darwin-freethreaded",
    ],
    python_versions = [x.replace("_", ".") for x in PYTHON_VERSIONS],
)
use_repo(environments, "rules_pycross_all_environments")

lock_file = use_extension("@rules_pycross//pycross/extensions:lock_file.bzl", "lock_file")
lock_file.instantiate(
    name = "modular_pip_lock_file_repo",
    lock_file = "//bazel/pip/requirements:pycross_lock_file.bzl",
)
use_repo(lock_file, "modular_pip_lock_file_repo")

module_versions = use_repo_rule("//bazel/pip:module_versions.bzl", "module_versions")

module_versions(
    name = "module_versions",
    default_python_version = DEFAULT_PYTHON_VERSION,
    python_versions = PYTHON_VERSIONS,
)

# TODO: Drop once we can directly use cc_binary in parent rules
compat = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(compat, "cc_compatibility_proxy")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

RUFF_VERSION = "0.14.0"

[
    http_archive(
        name = "ruff-{arch}".format(arch = arch),
        build_file_content = 'exports_files(["ruff"])',
        sha256 = sha,
        strip_prefix = "ruff-{arch}".format(arch = arch),
        url = "https://github.com/astral-sh/ruff/releases/download/{version}/ruff-{arch}.tar.gz".format(
            arch = arch,
            version = RUFF_VERSION,
        ),
    )
    for arch, sha in [
        ("x86_64-unknown-linux-gnu", "28fe06f700caf99eee235f90e6e349f48b7f9a4b0d42e3ee5b3686f9259649a3"),
        ("aarch64-unknown-linux-gnu", "60fc3b464a723456ba1bc8cd91d29806753c885f72e26ac67b718cee6b35aaca"),
        ("aarch64-apple-darwin", "0b7c193d5c45eda02226720eb75239fabeca995d5a0eb3830fd2973caa3030ec"),
    ]
]

http_archive(
    name = "rocshmem",
    build_file_content = """

package(default_visibility = ["//visibility:public"])

# This is the device-side bitcode that is linked into shmem.mojopkg.
filegroup(
    name = "device",
    srcs = ["lib/librocshmem_device.bc"],
)

filegroup(
    name = "host",
    srcs = [
        "lib/librocshmem_host.so",
        "lib/libnl-3.so.200",
    ]
)

""",
    # built from commit: https://github.com/modularml/rocm-systems/commit/84f4e1e366b66066ba01d0ec64bfeaee0bf6f7b6
    sha256 = "9e75030c46158d8ff87d305cf39b9953c5a0d780780fcff93ef89c149835c69e",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/rocshmem/3.2.1/9e75030c46158d8ff87d305cf39b9953c5a0d780780fcff93ef89c149835c69e/rocshmem.tar.gz",
)

http_archive(
    name = "nvshmem_prebuilt",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

# This is the device-side bitcode that is linked into shmem.mojopkg.
filegroup(
    name = "device",
    srcs = ["lib/libnvshmem_device.bc"],
)

# This has three purposes:
#  - enable bazel to dlopen the libs from test runfiles
#  - copy the libs to python wheel `site-packages/modular/lib` folder
#  - relink and copy the libs to conda package `lib` folder
genrule(
    name = "host",
    srcs = glob(["lib/*.so*"]),
    outs = [
        "libnvshmem_host.so.3",
        "nvshmem_bootstrap_mpi.so.3",
        "nvshmem_transport_ibrc.so.3",
        "nvshmem_transport_ibgda.so.3",
    ],
    cmd = '''
        # Copy all lib/*.so* files from our prebuilt tar
        for src in $(SRCS); do
            cp -L $$src $(@D)
        done
    ''',
)
""",
    # commit: https://github.com/modularml/NVSHMEM/commit/e88ac46a9d0b5964cbfe5866dbaf61534348978c
    sha256 = "ff68bc9870dadb363b826687c0aae51750ef9c5a167c98a26de0ff2be1d28493",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/nvshmem/3.4.5/ff68bc9870dadb363b826687c0aae51750ef9c5a167c98a26de0ff2be1d28493/nvshmem.tar.gz",
)

mojo = use_extension("@rules_mojo//mojo:extensions.bzl", "mojo")
mojo.gpu_toolchains(
    # nvidia-smi / amd-smi output -> GPU name, empty string to ignore GPU
    gpu_mapping = {
        " A10G": "a10",
        "A100-": "a100",
        " H100": "h100",
        " H200": "h200",
        " L4": "l4",
        " Ada ": "l4",
        " A3000 ": "a3000",
        "B100": "b100",
        "B200": "b200",
        "B300": "b300",
        " RTX 5090": "rtx5090",
        "Laptop GPU": "",
        "RTX 4070 Ti": "",
        "RTX 4080 SUPER": "",
        "RTX 4090": "rtx4090",
        "NVIDIA GeForce RTX 3090": "rtx3090",
        "NVIDIA GeForce GTX 1080 Ti": "gtx1080ti",
        "NVIDIA GeForce GTX 1060": "gtx1060",
        "NVIDIA GeForce GTX 970": "gtx970",
        "GB10": "gb10",
        "MI300X": "mi300x",
        "MI325": "mi325",
        "MI355": "mi355",
        "MI250X": "gfx90a",
        "Navi 31": "W7900",
        "Navi 31 [Radeon Pro W7900]": "W7900",
        "AMD Radeon RX 6900 XT": "rx6900xt",
        "AMD Radeon PRO W7900": "W7900",
        "AMD Radeon Pro W7900": "W7900",
        "Phoenix3": "780M",
        "Strix Halo": "strixhalo",
        "Metal 1": "",  # Unsupported, macOS updates on any hardware get you to Metal 3+
        "Metal 2": "",  # Unsupported, macOS updates on any hardware get you to Metal 3+
        "Metal 3": "metal3",  # macOS 15
        "Metal 4": "metal4",  # macOS 26
    },
    # GPU name -> target accelerator
    supported_gpus = {
        "780M": "amdgpu:gfx1103",
        "W7900": "amdgpu:gfx1100",
        "a10": "nvidia:sm_86",
        "a100": "nvidia:sm_80",
        "a3000": "nvidia:sm_86",
        "b100": "nvidia:sm_100a",
        "b200": "nvidia:sm_100a",
        "b300": "nvidia:sm_103a",
        "h100": "nvidia:sm_90a",
        "h200": "nvidia:sm_90a",
        "l4": "nvidia:sm_89",
        "gfx90a": "amdgpu:gfx90a",
        "mi300x": "amdgpu:gfx942",
        "mi325": "amdgpu:gfx942",
        "mi355": "amdgpu:gfx950",
        "rtx3090": "nvidia:sm_86",
        "gtx970": "nvidia:sm_52",
        "gtx1080ti": "nvidia:sm_61",
        "gtx1060": "nvidia:sm_61",
        "rtx4090": "nvidia:sm_89",
        "rtx5090": "nvidia:sm_120a",
        "gb10": "nvidia:sm_121",
        "rx6900xt": "amdgpu:gfx1030",
        "strixhalo": "amdgpu:gfx1151",
        "metal3": "metal:3",
        "metal4": "metal:4",
    },
)
use_repo(mojo, "mojo_gpu_toolchains", "mojo_host_platform")

http_archive(
    name = "bazel_clang_tidy",
    sha256 = "96da6e935ccc91045cf928dbc57f22508a2729c51f7fb3f56178017b0deb9b3c",
    strip_prefix = "bazel_clang_tidy-c4d35e0d0b838309358e57a2efed831780f85cd0",
    url = "https://github.com/erenon/bazel_clang_tidy/archive/c4d35e0d0b838309358e57a2efed831780f85cd0.tar.gz",
)

http_archive(
    name = "uv_linux_aarch64",
    build_file_content = 'exports_files(["uv"])',
    sha256 = "f177397625eb7ca184a01a954c7d487d1cafee68e53cc8f2789a02f75c347a68",
    strip_prefix = "uv-aarch64-unknown-linux-musl",
    url = "https://github.com/astral-sh/uv/releases/download/0.9.7/uv-aarch64-unknown-linux-musl.tar.gz",
)

http_archive(
    name = "uv_linux_x86_64",
    build_file_content = 'exports_files(["uv"])',
    sha256 = "b26fcc8dfa1c39b5a5613445af3be3eefda45d9a39359bee271eafe34913583e",
    strip_prefix = "uv-x86_64-unknown-linux-gnu",
    url = "https://github.com/astral-sh/uv/releases/download/0.9.7/uv-x86_64-unknown-linux-gnu.tar.gz",
)

http_archive(
    name = "uv_darwin_aarch64",
    build_file_content = 'exports_files(["uv"])',
    sha256 = "35572b9619fc14d67fc1cd72582c3cfc5c9c66d97f310192e04f26fb3fe96005",
    strip_prefix = "uv-aarch64-apple-darwin",
    url = "https://github.com/astral-sh/uv/releases/download/0.9.7/uv-aarch64-apple-darwin.tar.gz",
)

bazel_dep(name = "sysroot-jammy-aarch64")
archive_override(
    module_name = "sysroot-jammy-aarch64",
    integrity = "sha256-ffQulmT//0z6X+gnh1KMf8P+GriRAzQjpCPlBG0J3KY=",
    urls = [
        "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/sysroot-jammy-aarch64/9/7df42e9664ffff4cfa5fe82787528c7fc3fe1ab891033423a423e5046d09dca6/sysroot-jammy-aarch64.tar.xz",
    ],
)

bazel_dep(name = "sysroot-jammy-x86_64")
archive_override(
    module_name = "sysroot-jammy-x86_64",
    integrity = "sha256-R68NQrIzeWqcwGSzh46MSQ/edMIhSM+WhmFj1gs4xsA=",
    urls = [
        "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/sysroot-jammy-x86_64/9/47af0d42b233796a9cc064b3878e8c490fde74c22148cf96866163d60b38c6c0/sysroot-jammy-x86_64.tar.xz",
    ],
)

http_archive(
    name = "clang-linux-x86_64",
    build_file = "//bazel/public-patches:clang.BUILD",  # TODO: Delete next bump
    sha256 = "4ec4349717c3e6c7ffa0777b6f7e8987af039e05f0a32af5316c3dd730496651",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/llvm-linux-x86_64/20.1.8/4ec4349717c3e6c7ffa0777b6f7e8987af039e05f0a32af5316c3dd730496651/llvm-linux-x86_64.tar.xz",
)

http_archive(
    name = "clang-linux-aarch64",
    build_file = "//bazel/public-patches:clang.BUILD",  # TODO: Delete next bump
    sha256 = "5bda1756f6cfb7a3472b5a885acb8d747040662305922eb809154481f1222189",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/llvm-linux-aarch64/20.1.8/5bda1756f6cfb7a3472b5a885acb8d747040662305922eb809154481f1222189/llvm-linux-aarch64.tar.xz",
)

http_archive(
    name = "clang-macos",
    build_file = "//bazel/public-patches:clang.BUILD",  # TODO: Delete next bump
    sha256 = "a871653a114657136ae0dc25d979046a800aa30d8951e82b00eb5720caf9b4a8",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/llvm-macos/20.1.8/a871653a114657136ae0dc25d979046a800aa30d8951e82b00eb5720caf9b4a8/llvm-macos.tar.xz",
)

SHELLCHECK_VERSION = "v0.10.0"

[
    http_archive(
        name = "shellcheck-{}".format(arch),
        build_file_content = """exports_files(glob(["shellcheck"]))""",
        integrity = sha,
        strip_prefix = "shellcheck-{}".format(SHELLCHECK_VERSION),
        urls = [
            # https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.darwin.aarch64.tar.xz
            "https://github.com/koalaman/shellcheck/releases/download/{version}/shellcheck-{version}.{arch}.tar.xz".format(
                arch = arch,
                version = SHELLCHECK_VERSION,
            ),
        ],
    )
    for arch, sha in [
        ("linux.x86_64", "sha256-bIgasGmOTm6iNSRfIoMoYFRPF7o4ZEL+fp1in4y+34c="),
        ("linux.aarch64", "sha256-Mkp+id6Poq7Q0MKPPatZz4TG10JkAiwAwir2Ze0aCbs="),
        ("darwin.aarch64", "sha256-u9LxSCYyju52edpyIfK8OvsBH2qSi4SMgMMh9gRt34E="),
    ]
]

http_archive(
    name = "mistral-evals",
    build_file = "//bazel/public-patches:mistral-evals.BUILD",
    patch_args = ["-p1"],
    patches = [
        "//bazel/public-patches:mistral-evals-0001-Check-health-endpoint-with-and-without-v1.patch",
        "//bazel/public-patches:mistral-evals-0002-Increase-request-parallelism.patch",
    ],
    sha256 = "d34c715e7a625a7acb392ffebca23da30693a992979d7c58f3c13e6000e9adc5",
    strip_prefix = "mistral-evals-02bbf53fea669323010bba74f1b9874472d0d47c",
    # Mirrored from https://github.com/mistralai/mistral-evals/archive/02bbf53fea669323010bba74f1b9874472d0d47c.tar.gz
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/mistral-evals/02bbf53fea669323010bba74f1b9874472d0d47c/d34c715e7a625a7acb392ffebca23da30693a992979d7c58f3c13e6000e9adc5/mistral-evals-02bbf53fea669323010bba74f1b9874472d0d47c.tar.gz",
)

# Blackwell (SM100) benchmark wheel dependencies for external baselines (DeepGEMM, FlashInfer, flash-attention).
# These wheels are pre-built on a B200 machine and uploaded via:
#   ./utils/upload-public-bazel-artifact.sh <name> sm100 <wheel_path>
# To rebuild wheels, use: python Kernels/utils/setup_bench_env.py --build-wheels
# NOTE: Filename has '+' replaced with '_' to avoid S3 URL encoding issues.
# The '+' in PEP 440 local versions (e.g., 2.2.0+38f8ef7) requires URL encoding
# as %2B, but Bazel's http_file doesn't encode, causing 403 errors.
# setup_bench_env.py --build-wheels automatically sanitizes filenames.
http_file(
    name = "deepgemm_sm100_wheel",
    downloaded_file_path = "deep_gemm-2.2.0_38f8ef7-cp312-cp312-linux_x86_64.whl",
    sha256 = "91a898b8704b91726646e98403f6028b1e601603b2d34f8e4530370072e474cf",
    urls = ["https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/deep_gemm/sm100/91a898b8704b91726646e98403f6028b1e601603b2d34f8e4530370072e474cf/deep_gemm-2.2.0_38f8ef7-cp312-cp312-linux_x86_64.whl"],
)

http_file(
    name = "flashinfer_sm100_wheel",
    downloaded_file_path = "flashinfer_python-0.5.2-py3-none-any.whl",
    sha256 = "0afdb8f536a3a101ac7f653d66a5f4f63991f820352daf64950dab89f9806c1c",
    urls = ["https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/flashinfer/sm100/0afdb8f536a3a101ac7f653d66a5f4f63991f820352daf64950dab89f9806c1c/flashinfer_python-0.5.2-py3-none-any.whl"],
)

http_file(
    name = "flash_attn_sm100_wheel",
    downloaded_file_path = "flash_attn-2.8.3-py3-none-any.whl",
    sha256 = "3f4db99ab00437fb50c61da11d0647e5ab7aeab1b0b7337ae048dd8ee1b308b2",
    urls = ["https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/flash_attn/sm100/3f4db99ab00437fb50c61da11d0647e5ab7aeab1b0b7337ae048dd8ee1b308b2/flash_attn-2.8.3-py3-none-any.whl"],
)

# https://github.com/modularml/breathe
http_archive(
    name = "breathe",
    build_file = "//bazel/public-patches:breathe.BUILD",
    integrity = "sha256-Y1XQwi/+pN46XJgXsELvLQQ7VCj1euW7b1ByFQx+koI=",
    strip_prefix = "breathe-main",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/python/breathe/362ea3ed28e38517cf4836d71790c6c04217ba39.zip",
)

# https://github.com/modularml/sphinx-markdown-builder
http_archive(
    name = "sphinx-markdown-builder",
    build_file = "//bazel/public-patches:sphinx-markdown-builder.BUILD",
    integrity = "sha256-AT4fMP40arW8wq0oaW008j6AIo4bF63DE8OfNn2f9Qk=",
    strip_prefix = "sphinx-markdown-builder-0.7.11",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/python/sphinx-markdown-builder/8360213fde3916e8597cbe25f59532ab2a8ce6a8.zip",
)

# https://github.com/scottamain/sphinx-click
http_archive(
    name = "sphinx-click",
    sha256 = "56614eb1f03c258e426012f0f71ee1d39254bfea3095add64394ac2aae234328",
    strip_prefix = "sphinx-click-7c1a85c2667ed8b3b4060e94ce07456e5fa4fef6",
    url = "https://github.com/scottamain/sphinx-click/archive/7c1a85c2667ed8b3b4060e94ce07456e5fa4fef6.tar.gz",
)

# VLLM still requires transformers v4, so we pull this separately and manually add it when it's used.
# Note this means two transformers within the same venv, this is just a temporary hack until upstream updates to v5.
http_file(
    name = "transformers_v4_wheel",
    downloaded_file_path = "transformers-4.57.6-py3-none-any.whl",
    sha256 = "4c9e9de11333ddfe5114bc872c9f370509198acf0b87a832a0ab9458e2bd0550",
    urls = [
        "https://files.pythonhosted.org/packages/03/b8/e484ef633af3887baeeb4b6ad12743363af7cce68ae51e938e00aaa0529d/transformers-4.57.6-py3-none-any.whl",
    ],
)

# Similar to above, transitive dep of transformers v4 vs v5
http_file(
    name = "huggingface_hub_v0_wheel",
    downloaded_file_path = "huggingface_hub-0.36.2-py3-none-any.whl",
    sha256 = "48f0c8eac16145dfce371e9d2d7772854a4f591bcb56c9cf548accf531d54270",
    urls = [
        "https://files.pythonhosted.org/packages/a8/af/48ac8483240de756d2438c380746e7130d1c6f75802ef22f3c6d49982787/huggingface_hub-0.36.2-py3-none-any.whl",
    ],
)

# Intersphinx object inventory for Python
http_archive(
    name = "python-objects-inv",
    build_file_content = """
filegroup(
    name = "python-objects-inv",
    srcs = ["max/python/docs/inventories/python/objects.inv"],
    visibility = ["//visibility:public"],
)""",
    sha256 = "e160e55c13c7fa6db17fc81da0a5d4845b877d6810f231b3d9ea050c486474e5",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/python-objects-inv/3.14/e160e55c13c7fa6db17fc81da0a5d4845b877d6810f231b3d9ea050c486474e5/python-objects-inv.tar.gz",
)

# Intersphinx object inventory for Numpy
http_archive(
    name = "numpy-objects-inv",
    build_file_content = """
filegroup(
    name = "numpy-objects-inv",
    srcs = ["max/python/docs/inventories/numpy/objects.inv"],
    visibility = ["//visibility:public"],
)""",
    sha256 = "0e81fda4ee39068456d5aa205d0100ca88826954072166f66e9516946685f245",
    url = "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/numpy-objects-inv/2.4/0e81fda4ee39068456d5aa205d0100ca88826954072166f66e9516946685f245/numpy-objects-inv.tar.gz",
)

RUMDL_VERSION = "0.1.62"

[
    http_archive(
        name = "rumdl-{}".format(arch),
        build_file_content = """exports_files(glob(["rumdl"]))""",
        integrity = sha,
        urls = [
            "https://github.com/rvben/rumdl/releases/download/v{version}/rumdl-v{version}-{arch}.tar.gz".format(
                arch = arch,
                version = RUMDL_VERSION,
            ),
        ],
    )
    for arch, sha in [
        ("x86_64-unknown-linux-musl", "sha256-Se09mqkYH02VKDhOyKhp1DM5E9OBnsmbvO4TWpmnJOQ="),
        ("aarch64-unknown-linux-musl", "sha256-fRBlBoF6IYiYR7CIIKCvNHjFFvKpBoeWdRx5MV0qQ/4="),
        ("aarch64-apple-darwin", "sha256-kzo6eHzmTy+IDbxXihO9UD7yLS1fn6oxqR9R5V72NZk="),
    ]
]

# BEGIN GENERATED LOGIT_VERIFICATION GOLDEN HTTP_FILES

LOGIT_VERIFICATION_GOLDENS = [
    {
        "name": "torch_llama_golden.tar.gz",
        "sha256": "03d7f428e3fdd43f6436ff19c5c5f7245e7cb71deacd17e8b0d0bd8f35701daa",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama_golden/6/03d7f428e3fdd43f6436ff19c5c5f7245e7cb71deacd17e8b0d0bd8f35701daa/torch_llama_golden.tar.gz",
    },
    {
        "name": "torch_mpnet_golden.tar.gz",
        "sha256": "d93f10114938b5102f529f436170e2eb33a3d2c76889acf3406b54603cc1be97",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_mpnet_golden/1/d93f10114938b5102f529f436170e2eb33a3d2c76889acf3406b54603cc1be97/torch_mpnet_golden.tar.gz",
    },
    {
        "name": "torch_gpt-oss_golden.tar.gz",
        "sha256": "808b22644ad4c499e44408f2e80a14367f8c7cc16a16c7df60c0b2227a1812c3",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_gpt-oss_golden/3/808b22644ad4c499e44408f2e80a14367f8c7cc16a16c7df60c0b2227a1812c3/torch_gpt-oss_golden.tar.gz",
    },
    {
        "name": "torch_olmo-1b-hf_golden.tar.gz",
        "sha256": "cdb42a9758e27374be0b410b8d38a2f9a66fc3662346702a5930730da2a50302",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_olmo-1b-hf_golden/1/cdb42a9758e27374be0b410b8d38a2f9a66fc3662346702a5930730da2a50302/torch_olmo-1b-hf_golden.tar.gz",
    },
    {
        "name": "torch_llama3-8b_q4_k_golden.tar.gz",
        "sha256": "5078639f4386c9d7e11eff0b09de2917b41494aae1168efe9e3db2bb4c8be3ef",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama3-8b_q4_k_golden/1/5078639f4386c9d7e11eff0b09de2917b41494aae1168efe9e3db2bb4c8be3ef/torch_llama3-8b_q4_k_golden.tar.gz",
    },
    {
        "name": "torch_llama3-8b_bfloat16_golden.tar.gz",
        "sha256": "1ba2f2214bfffa3e8e5f166d5d1d5573201efa4dcb5c668f4b84fb9466861e56",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama3-8b_bfloat16_golden/1/1ba2f2214bfffa3e8e5f166d5d1d5573201efa4dcb5c668f4b84fb9466861e56/torch_llama3-8b_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_llama3.1-8b_q4_k_golden.tar.gz",
        "sha256": "13c75e9e445ecf05c1fbc0f2f9e73361062c2efbc62c01575278cfa4d0a64b2e",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama3.1-8b_q4_k_golden/1/13c75e9e445ecf05c1fbc0f2f9e73361062c2efbc62c01575278cfa4d0a64b2e/torch_llama3.1-8b_q4_k_golden.tar.gz",
    },
    {
        "name": "20260205_180241_nvidia-Llama-3.1-8B-Instruct-NVFP4_vllm.json.tar.gz",
        "sha256": "vllm_llama_3_1_8B_nvfp4",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_llama_3_1_8B_nvfp4/20260205_180241_nvidia-Llama-3.1-8B-Instruct-NVFP4_vllm.json.tar.gz",
    },
    {
        "name": "20260210_031603_nvidia-Llama-3.1-405B-Instruct-NVFP4_vllm.json.tar.gz",
        "sha256": "vllm_llama_3_1_405B_nvfp4",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_llama_3_1_405B_nvfp4/20260210_031603_nvidia-Llama-3.1-405B-Instruct-NVFP4_vllm.json.tar.gz",
    },
    {
        "name": "RedHatAI_Meta-Llama-3.1-405B-Instruct-FP8-dynamic_golden.tar.gz",
        "sha256": "58bcc105671be4a0fb59070924a231ab4fefd02879dd6e826d4d8f99ddfb962f",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/RedHatAI_Meta-Llama-3.1-405B-Instruct-FP8-dynamic_golden/1/58bcc105671be4a0fb59070924a231ab4fefd02879dd6e826d4d8f99ddfb962f/RedHatAI_Meta-Llama-3.1-405B-Instruct-FP8-dynamic_golden.tar.gz",
    },
    {
        "name": "torch_llama3.2-1b_bfloat16_golden.tar.gz",
        "sha256": "f77876a9612aba6f0df1ab1bd9f3819656f962a46e2b3133d11a4290c936de3a",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama3.2-1b_bfloat16_golden/1/f77876a9612aba6f0df1ab1bd9f3819656f962a46e2b3133d11a4290c936de3a/torch_llama3.2-1b_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_llama3.3-70b-instruct_bfloat16_golden.tar.gz",
        "sha256": "e4a07947f7f23c0b1bc5d297bbe1575b637abb53270e99b284936bf6d2dc703f",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama3.3-70b-instruct_bfloat16_golden/1/e4a07947f7f23c0b1bc5d297bbe1575b637abb53270e99b284936bf6d2dc703f/torch_llama3.3-70b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_mistral_golden.tar.gz",
        "sha256": "6f4718625a01e6e8b9f002a0bfdad8098cfe78ce50b9cd4175f27b1f020b405a",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_mistral_golden/1/6f4718625a01e6e8b9f002a0bfdad8098cfe78ce50b9cd4175f27b1f020b405a/torch_mistral_golden.tar.gz",
    },
    {
        "name": "torch_internvl3-1b_golden.tar.gz",
        "sha256": "c0cc901fe70ef9f90801a921aae56e6c8a3ce11e7173cdeed27c46f147f29463",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_internvl3-1b_golden/1/c0cc901fe70ef9f90801a921aae56e6c8a3ce11e7173cdeed27c46f147f29463/torch_internvl3-1b_golden.tar.gz",
    },
    {
        "name": "torch_internvl3-8b_golden.tar.gz",
        "sha256": "18c65a6f996008b7bb44ccb5369e862df5868a1d13b15165fe80bd8f9edc7415",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_internvl3-8b_golden/1/18c65a6f996008b7bb44ccb5369e862df5868a1d13b15165fe80bd8f9edc7415/torch_internvl3-8b_golden.tar.gz",
    },
    {
        "name": "torch_internvl3-14b_golden.tar.gz",
        "sha256": "b0b6be883a40a1f44d85abbf077edec5c768fee8302f0595147ce7197da8560f",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_internvl3-14b_golden/1/b0b6be883a40a1f44d85abbf077edec5c768fee8302f0595147ce7197da8560f/torch_internvl3-14b_golden.tar.gz",
    },
    {
        "name": "torch_internvl3-38b_golden.tar.gz",
        "sha256": "68ce8e1ca017a4b42b1a9f270345dd64e869c57c582d5ade12eb654a42893b21",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_internvl3-38b_golden/1/68ce8e1ca017a4b42b1a9f270345dd64e869c57c582d5ade12eb654a42893b21/torch_internvl3-38b_golden.tar.gz",
    },
    {
        "name": "torch_internvl3_5_8b_golden.tar.gz",
        "sha256": "c1e88d08b863bc4e5ad250bf91bbe9e6a371f1244f96dd37befb8c1a086afcea",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_internvl3_5_8b_golden/1/c1e88d08b863bc4e5ad250bf91bbe9e6a371f1244f96dd37befb8c1a086afcea/torch_internvl3_5_8b_golden.tar.gz",
    },
    {
        "name": "torch_pixtral_golden.tar.gz",
        "sha256": "e2ec8c3693bf758df21d5673a35847df88307fb6568a851be531c53e6b18f710",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_pixtral_golden/1/e2ec8c3693bf758df21d5673a35847df88307fb6568a851be531c53e6b18f710/torch_pixtral_golden.tar.gz",
    },
    {
        "name": "torch_qwen2.5-7b-instruct_bfloat16_golden.tar.gz",
        "sha256": "a18b2a5b0e4a63ba828fa956ffeed04feaf5501721dae0421670c94e93f445a0",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen2.5-7b-instruct_bfloat16_golden/1/a18b2a5b0e4a63ba828fa956ffeed04feaf5501721dae0421670c94e93f445a0/torch_qwen2.5-7b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_qwen2.5-vl-3b-instruct_bfloat16_golden.tar.gz",
        "sha256": "40a5c716c43ae003113b7a38eff4121619d4ca58bdf4d8b6f6b362529279ba5d",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen2.5-vl-3b-instruct_bfloat16_golden/1/40a5c716c43ae003113b7a38eff4121619d4ca58bdf4d8b6f6b362529279ba5d/torch_qwen2.5-vl-3b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_qwen2.5-vl-7b-instruct_bfloat16_golden.tar.gz",
        "sha256": "6c5aaac177ce9a8428b972667383621d2bb853a1ec3c44fdd63ca00661fff4e0",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen2.5-vl-7b-instruct_bfloat16_golden/1/6c5aaac177ce9a8428b972667383621d2bb853a1ec3c44fdd63ca00661fff4e0/torch_qwen2.5-vl-7b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_qwen2.5-vl-32b-instruct_bfloat16_golden.tar.gz",
        "sha256": "62db96f972e210adb18a6042441b49feb5a163bdb6f5592e8788dbb9f887dbe8",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen2.5-vl-32b-instruct_bfloat16_golden/1/62db96f972e210adb18a6042441b49feb5a163bdb6f5592e8788dbb9f887dbe8/torch_qwen2.5-vl-32b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_qwen3-vl-30b-a3b-instruct_bfloat16_golden.tar.gz",
        "sha256": "43b1500269067c2e25bed53fefc98c3973e2132fabdfb6923acbedc531636bc0",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen3-vl-30b-a3b-instruct_bfloat16_golden/1/43b1500269067c2e25bed53fefc98c3973e2132fabdfb6923acbedc531636bc0/torch_qwen3-vl-30b-a3b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_qwen3-vl-4b-instruct_bfloat16_golden.tar.gz",
        "sha256": "7c5d43eeab21e1478b79fc849a537766809b1c3aabb7f253309dc47895d1de39",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen3-vl-4b-instruct_bfloat16_golden/1/7c5d43eeab21e1478b79fc849a537766809b1c3aabb7f253309dc47895d1de39/torch_qwen3-vl-4b-instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_qwen3-vl-4b-instruct_fp8_golden.tar.gz",
        "sha256": "f1060a92f10622b249b900f03c64a81fe44111141b704b17125063e9da350dd3",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen3-vl-4b-instruct_fp8_golden/1/f1060a92f10622b249b900f03c64a81fe44111141b704b17125063e9da350dd3/torch_qwen3-vl-4b-instruct_fp8_golden.tar.gz",
    },
    {
        "name": "torch_qwen3_8b_golden.tar.gz",
        "sha256": "a952c1f1cae7dd647abbb01db7232b73d2cd084a561a7da5d3027e95acbeaf71",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen3_8b_golden/1/a952c1f1cae7dd647abbb01db7232b73d2cd084a561a7da5d3027e95acbeaf71/torch_qwen3_8b_golden.tar.gz",
    },
    {
        "name": "torch_qwen3-30b-a3b-instruct-2507_bfloat16_golden.tar.gz",
        "sha256": "4427d3205be77073d7f0274d8fca0774974fe8677934a5b8dc60b3705aac9aaf",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen3-30b-a3b-instruct-2507_bfloat16_golden/1/4427d3205be77073d7f0274d8fca0774974fe8677934a5b8dc60b3705aac9aaf/torch_qwen3-30b-a3b-instruct-2507_bfloat16_golden.tar.gz",
    },
    {
        "name": "Qwen_Qwen3-30B-A3B-Instruct-2507-FP8_golden.tar.gz",
        "sha256": "51490a4ac6612bf0a3af0f6953d5a1bff2b12683ca4c134dba9a13ea5c44f2bb",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/Qwen_Qwen3-30B-A3B-Instruct-2507-FP8_golden/1/51490a4ac6612bf0a3af0f6953d5a1bff2b12683ca4c134dba9a13ea5c44f2bb/Qwen_Qwen3-30B-A3B-Instruct-2507-FP8_golden.tar.gz",
    },
    {
        "name": "torch_qwen3_embedding_0.6b_bfloat16_golden.tar.gz",
        "sha256": "98f263166b17cbc486f6709903c35ab1126f938efc0ea07289abd0419d6b9b48",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_qwen3_embedding_0.6b_bfloat16_golden/1/98f263166b17cbc486f6709903c35ab1126f938efc0ea07289abd0419d6b9b48/torch_qwen3_embedding_0.6b_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_olmocr_2_7b_fp8_golden.tar.gz",
        "sha256": "7177335f99779ffdf6dd516a1c6082d75ce3d26b9a7dbe06ec88ebbd729a090e",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_olmocr_2_7b_fp8_golden/1/7177335f99779ffdf6dd516a1c6082d75ce3d26b9a7dbe06ec88ebbd729a090e/torch_olmocr_2_7b_fp8_golden.tar.gz",
    },
    {
        "name": "torch_olmo2_1124_7b_float32_golden.tar.gz",
        "sha256": "65d0d4860591ae05c7ae3cf062bc0bb5429733db08b49635f3deeeb7369eb122",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_olmo2_1124_7b_float32_golden/1/65d0d4860591ae05c7ae3cf062bc0bb5429733db08b49635f3deeeb7369eb122/torch_olmo2_1124_7b_float32_golden.tar.gz",
    },
    {
        "name": "torch_idefics3_8b_llama3_golden.tar.gz",
        "sha256": "996834f83014e543593c5a9ae283b16e33e05575720cce9ec4e175c0ad3a5283",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_idefics3_8b_llama3_golden/3/996834f83014e543593c5a9ae283b16e33e05575720cce9ec4e175c0ad3a5283/torch_idefics3_8b_llama3_golden.tar.gz",
    },
    {
        "name": "torch_exaone_3_5_2_4b_instruct_float32_golden.tar.gz",
        "sha256": "ae16f10ebd7514f5d60f25755babbcff9636a4fa1c68d1470f614474fa907427",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_exaone_3_5_2_4b_instruct_float32_golden/1/ae16f10ebd7514f5d60f25755babbcff9636a4fa1c68d1470f614474fa907427/torch_exaone_3_5_2_4b_instruct_float32_golden.tar.gz",
    },
    {
        "name": "torch_phi_3_5_mini_instruct_bfloat16_golden.tar.gz",
        "sha256": "23beeadd54f6b299463a0bb5c8d2bdbe010ba27dabb686f942d33e56ec4d0870",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_phi_3_5_mini_instruct_bfloat16_golden/1/23beeadd54f6b299463a0bb5c8d2bdbe010ba27dabb686f942d33e56ec4d0870/torch_phi_3_5_mini_instruct_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_phi_4_bfloat16_golden.tar.gz",
        "sha256": "8634be2cd675ea0dbb8a2ce84692572dd003505fa86edd91f0d8b0659d09b6f0",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_phi_4_bfloat16_golden/0/8634be2cd675ea0dbb8a2ce84692572dd003505fa86edd91f0d8b0659d09b6f0/torch_phi_4_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_llama-gptq_golden.tar.gz",
        "sha256": "7e5b7b4d1764033be69e85e0badc9dca82c94c8d2def1216d317b149a621daef",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llama-gptq_golden/0/7e5b7b4d1764033be69e85e0badc9dca82c94c8d2def1216d317b149a621daef/torch_llama-gptq_golden.tar.gz",
    },
    {
        "name": "torch_deepseek-v3-small-random-bfloat16_golden.tar.gz",
        "sha256": "a014fa9dfbadae61869bb51da13e6e5c9fa6294a03b18b49c9217da6024a13eb",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_deepseek-v3-small-random-bfloat16_golden/1/a014fa9dfbadae61869bb51da13e6e5c9fa6294a03b18b49c9217da6024a13eb/torch_deepseek-v3-small-random-bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_deepseek-v3-small-random-fp8_golden.tar.gz",
        "sha256": "29b77d635f3e2cb5f3b8df155174ce5a77f5d6d1a074a4283fddcaf090906cc8",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_deepseek-v3-small-random-fp8_golden/1/29b77d635f3e2cb5f3b8df155174ce5a77f5d6d1a074a4283fddcaf090906cc8/torch_deepseek-v3-small-random-fp8_golden.tar.gz",
    },
    {
        "name": "vllm_deepseek-r1_golden.tar.gz",
        "sha256": "f4b3ce07362060a857724d8721aa008880b2f1da3a9f90aec667672c92f7e5e9",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_deepseek-r1_golden/1/f4b3ce07362060a857724d8721aa008880b2f1da3a9f90aec667672c92f7e5e9/vllm_deepseek-r1_golden.tar.gz",
    },
    {
        "name": "vllm_kimik2_5_nvfp4_golden.tar.gz",
        "sha256": "0b26362d7cc605bcc3925fa3d6aff4aeef4ed12fe0ed2f1684f3c8cfbf285822",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_kimik2_5_nvfp4_golden/1/0b26362d7cc605bcc3925fa3d6aff4aeef4ed12fe0ed2f1684f3c8cfbf285822/vllm_kimik2_5_nvfp4_golden.tar.gz",
    },
    {
        "name": "torch_deepseek-ai_deepseek-v3_1-terminus_golden.tar.gz",
        "sha256": "d51257199f384cdb3f0e8086d95989899b7a316bb6511b62249d349b47e36447",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_deepseek-ai_deepseek-v3_1-terminus_golden/1/d51257199f384cdb3f0e8086d95989899b7a316bb6511b62249d349b47e36447/torch_deepseek-ai_deepseek-v3_1-terminus_golden.tar.gz",
    },
    {
        "name": "vllm_deepseek-r1-nvfp4_golden.tar.gz",
        "sha256": "9b19a48a9bba02fe76bda80402950c1ae13c5e0f93444b08c2c6499f4b3247e7",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_deepseek-r1-nvfp4_golden/9/9b19a48a9bba02fe76bda80402950c1ae13c5e0f93444b08c2c6499f4b3247e7/vllm_deepseek-r1-nvfp4_golden.tar.gz",
    },
    {
        "name": "torch_gemma3-1b_golden.tar.gz",
        "sha256": "31d4f0ff8f50b9ab0f877d8765114f6bc4ae73677d2cd2d6ce658866fabf15d4",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_gemma3-1b_golden/1/31d4f0ff8f50b9ab0f877d8765114f6bc4ae73677d2cd2d6ce658866fabf15d4/torch_gemma3-1b_golden.tar.gz",
    },
    {
        "name": "torch_gemma3-multimodal_golden.tar.gz",
        "sha256": "06d0fa8ed540ae7141a42c432af1661c85d31f8584d017345992df7a52c21ccb",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_gemma3-multimodal_golden/1/06d0fa8ed540ae7141a42c432af1661c85d31f8584d017345992df7a52c21ccb/torch_gemma3-multimodal_golden.tar.gz",
    },
    {
        "name": "torch_gemma3-27b_golden.tar.gz",
        "sha256": "d4747c90804cbfb6ee4ee06ec15c042dd436558354cfae819e0203d1c3610b38",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_gemma3-27b_golden/0/d4747c90804cbfb6ee4ee06ec15c042dd436558354cfae819e0203d1c3610b38/torch_gemma3-27b_golden.tar.gz",
    },
    {
        "name": "vllm_gemma3-27b_golden.tar.gz",
        "sha256": "1a619d49187cdce335f4492acab40fd950922748e6631c0478572344ff295efc",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_gemma3-27b_golden/1/1a619d49187cdce335f4492acab40fd950922748e6631c0478572344ff295efc/vllm_gemma3-27b_golden.tar.gz",
    },
    {
        "name": "torch_llasa-8b_bfloat16_golden.tar.gz",
        "sha256": "301c70b6c564f667ce279151964878354fe58d070f4f31869ecd6e2139172fc1",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_llasa-8b_bfloat16_golden/1/301c70b6c564f667ce279151964878354fe58d070f4f31869ecd6e2139172fc1/torch_llasa-8b_bfloat16_golden.tar.gz",
    },
    {
        "name": "torch_smollm2_360m_instruct_lora_bfloat16_golden.tar.gz",
        "sha256": "1149947546122f5eef59073a8b06a0fe525051eb6003d2891510bdff8e49be6e",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_smollm2_360m_instruct_lora_bfloat16_golden/1/1149947546122f5eef59073a8b06a0fe525051eb6003d2891510bdff8e49be6e/torch_smollm2_360m_instruct_lora_bfloat16_golden.tar.gz",
    },
    {
        "name": "vllm_llama_3_1_8B_fp8_bf16_lora.tar.gz",
        "sha256": "6db6cad8339db70f2975e9a610d79a8a57ba9b8c43a949d8008b95a0faf22f28",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/vllm_llama_3_1_8B_fp8_bf16_lora/1/6db6cad8339db70f2975e9a610d79a8a57ba9b8c43a949d8008b95a0faf22f28/vllm_llama_3_1_8B_fp8_bf16_lora.tar.gz",
    },
    {
        "name": "torch_black-forest-labs_FLUX.2-dev-t2i_golden.tar.gz",
        "sha256": "4a5da181a0bbbd1434ca8b02f51e68200c27535b8c0ed0941d77f0bc2e530f5a",
        "url": "https://modular-bazel-artifacts-public.s3.amazonaws.com/artifacts/torch_black-forest-labs_FLUX.2-dev-t2i_golden/1/4a5da181a0bbbd1434ca8b02f51e68200c27535b8c0ed0941d77f0bc2e530f5a/torch_black-forest-labs_FLUX.2-dev-t2i_golden.tar.gz",
    },
]

[
    http_file(
        name = entry["name"],
        sha256 = entry["sha256"],
        url = entry["url"],
    )
    for entry in LOGIT_VERIFICATION_GOLDENS
]

# END GENERATED LOGIT_VERIFICATION GOLDEN HTTP_FILES
