"""Define the Mojo toolchain"""

MAX_PACKAGE_VERSION = "26.4.0.dev2026051006"

MOJO_PACKAGE_VERSION = "1.0.0b2.dev2026051006"

BASE_URL = "https://whl.modular.com/nightly"

mojo = use_extension("@rules_mojo//mojo:extensions.bzl", "mojo")
mojo.toolchain(
    base_url = BASE_URL,
    use_prebuilt_packages = False,
    version = MOJO_PACKAGE_VERSION,
)
use_repo(mojo, "mojo_toolchains")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

rebuild_wheel = use_repo_rule("//bazel:modular_wheel_repository.bzl", "rebuild_wheel")

_PLATFORMS = [
    "linux_aarch64",
    "linux_x86_64",
    "macos_arm64",
]

[
    rebuild_wheel(
        name = "module_platlib_" + platform,
        base_url = BASE_URL,
        max_version = MAX_PACKAGE_VERSION,
        mojo_version = MOJO_PACKAGE_VERSION,
        platform = platform,
    )
    for platform in _PLATFORMS
]

http_file(
    name = "mblack_wheel",
    downloaded_file_path = "mblack-{}-py3-none-any.whl".format(
        MAX_PACKAGE_VERSION,
    ),
    url = "{}/mblack-{}-py3-none-any.whl".format(
        BASE_URL + "/mblack",
        MAX_PACKAGE_VERSION,
    ),
)
