load("@mojo//:mojo.bzl", "max_aliases")
load("//bazel:api.bzl", "modular_cc_library", "py_repl", "requirement")
load("//bazel:config.bzl", "TOP_LEVEL_TAG")

# gazelle:default_visibility //max:consumers

load("//max/python/max:all_deps.bzl", "ALL_MAX_PYTHON_DEPS")

package(default_visibility = ["//max:consumers"])

package_group(
    name = "consumers",
    packages = [
        "//",  # root BUILD.bazel file
        "//Faux/...",
        "//GraphCompiler/...",
        "//Kernels/...",
        "//bazel/...",
        "//docs/...",
        "//examples/...",  # OSS only
        "//mach/tools/...",  # mach engine's Python benchmark/MEF tooling
        "//max/...",
        "//max_private/...",  # private-only entrypoints + tool parsers
        "//oss/...",
        "//oss/modular/max/...",
        "//utils/...",
    ],
)

max_aliases()

alias(
    name = "max",
    actual = "//max/python/max/_entrypoints:pipelines",
    tags = [TOP_LEVEL_TAG],
)

py_repl(
    name = "repl",
    deps = ALL_MAX_PYTHON_DEPS + [
        requirement("hypothesis"),
        requirement("nvitop"),
        requirement("rich"),
        requirement("pytest"),
    ],
)

modular_cc_library(
    name = "CAPI.headers",
    hdrs = glob(["include/max/c/*.h"]),
    # NOTE: Internal modular_cc_library sets this by default,
    # this is for OSS compatibility.
    includes = ["include"],
    # NOTE: Target mainly exists to run clang-tidy as C files,
    # but also so these headers are accessible in the OSS build.
    tags = ["clang-tidy-is-c-tu"],
)

filegroup(
    name = "API.c.headers",
    srcs = glob(["include/max/c/*.h"]),
)

filegroup(
    name = "doxygen-sources",
    srcs = glob(["include/max/c/*.h"]),
    visibility = [
        "//max/internal/include/max/API/max/c/docs:__pkg__",
        "//oss/modular/max/internal/include/max/API/max/c/docs:__pkg__",
    ],
)
